--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,54 @@
       line-height: 1.6;
     }
 
+    h1 {
+      font-size: 56px;
+      line-height: 1.2;
+      font-weight: 700;
+      text-align: left;
+    }
+
     h2 {
       font-size: 48px;
       line-height: 1.2;
       font-weight: 700;
-      text-align: center;
+      text-align: left;
+    }
+
+    h3 {
+      font-size: 32px;
+      line-height: 1.2;
+      font-weight: 700;
+      text-align: left;
+      margin-bottom: 16px;
+    }
+
+    h4 {
+      font-size: 24px;
+      line-height: 1.2;
+      font-weight: 700;
+      text-align: left;
+      margin-bottom: 12px;
+    }
+
+    p {
+      font-size: 15px;
+      font-weight: 500;
+      line-height: 1.2;
+      text-align: left;
+    }
+
+    a {
+      color: #111;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    ul {
+      list-style: none;
     }
 
     .container {
@@ -68,12 +111,6 @@
     
     
     
-    .service-list {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
     .service-item {
       display: flex;
       align-items: center;
@@ -83,6 +120,7 @@
       border-radius: 8px;
       border: 1px solid #ddd;
       transition: all 0.3s ease;
+      margin-bottom: 16px;
     }
     .service-item:hover {
       border-color: #e02424;
@@ -98,6 +136,8 @@
     .icon {
       width: 16px;
       height: 16px;
+      margin-top: 4px;
+      margin-right: 8px;
       border-radius: 50%;
       background-color: #111;
       transition: background-color 0.3s ease;
@@ -112,6 +152,24 @@
     
     
     
+
+     .bullet {
+      flex-direction: row;
+      gap: 12px;
+      margin-right: 8px;}
+
+
+
+
+
+
+
+
+
+
+
+
+
     
     
     
